# flake8-too-many

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
flake8_too_many/: __init__.py  checker.py  message.py  messages.py  options.py  visitor.py
flake8_too_many/utils/: __init__.py  function_argument.py  function_arguments.py  function_return_stmts.py  function_return_values.py  unpacking_targets.py
scripts/: release.sh  update.py
tests/: test_function_arguments.py  test_function_return_stmts.py  test_function_return_values.py  test_unpacking_targets.py
tests/files/: function_argument.py  function_arguments.py  function_return_stmts.py  function_return_values.py  unpacking_targets.py
