[tool.poetry]
name = "flake8-too-many"
version = "0.1.0"
description = "A flake8 plugin that prevents you from writing \"too many\" bad codes."
authors = ["Queensferry <queensferry.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pre-commit = "^2.14.0"

[tool.poetry.plugins."flake8.extension"]
TMN = "flake8_too_many:Checker"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
